dark mode added, responsivity fix

--- a/style.css
+++ b/style.css
@@ -5,7 +5,13 @@
 }
 body {
     font-family: sans-serif;
-    /*background: rgb(48, 62, 70);*/
+    transition: all 0.5s ease;
+}
+img {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 0.6rem;
+    transform: translate(0px, 3px);
 }
 i, svg {
     pointer-events: none;
@@ -92,7 +98,18 @@ h1 {
 }
 .play {
     padding: 0.7rem 3rem;
+    border-radius: 4px;
     font-size: 1.5rem;
+    background: #344955;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+.light {
+    margin-top: 1.5rem;
+    padding: 0.5rem 1rem;
+    border-radius: 4px;
+    font-size: 1rem;
     background: #344955;
     color: white;
     border: none;
@@ -186,8 +203,7 @@ select {
     }
     .controls button {
         margin-left: 1rem;
-    }  
-  
+    }    
 }
 @media (max-width: 1096px) {
     .kick_track, .snare_track, .hihat_track, .clap_track {
